# student-test-scores-competition

./: .gitignore  README.md  eda-outputs.txt  pyproject.toml
params/: catboost_params.pkl  elasticnet_params.pkl  extratrees_params.pkl  gradientboosting_params.pkl  lightgbm_params.pkl  ridge_params.pkl  svr_params.pkl  xgboost_params.pkl
results/: best_hyperparameters.csv  best_hyperparameters.json  elasticnet_coefficients.csv  elasticnet_history.csv  elasticnet_study.pkl  elasticnet_summary.pkl  feature_importance.csv  model_comparison.csv  oof_predictions.csv  oof_predictions_detailed.csv  ridge_coefficients.csv  ridge_history.csv  ridge_study.pkl  ridge_summary.pkl  submission.csv
src/: classical-ML-approach.ipynb  data-preprocessing.ipynb  deeplearning-approach.ipynb  metalearner-ensamble-submission.ipynb  optimized-deeplearning-approach.ipynb
src/optimization/: catboost.ipynb  elasticnet.ipynb  extratrees.ipynb  gradientboosting.ipynb  lightgbm.ipynb  ridge.ipynb  svr.ipynb  xgboost.ipynb
