[project]
name = "students-scores"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "numpy>=1.23,<2.4.0",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "pytabkit>=1.7.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torch==2.9.1+cpu",
    "xgboost>=3.1.2",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
